<resources>
    <string name="app_name">Koipsool</string>
    <string name="app_desc">Trusted by over 1 lakh customers. Choose from 1000000+ Dealerworx Assured cars.</string>
    <string name="by_proceeding_you_accept_the">By proceeding you accept the</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend">Resend a new code.</string>
    <string name="create">Please type the verification code sent to Mobile number</string>
    <string name="mobile">Mobile no</string>
    <string name="agree">I agree to receive updates regarding my Acron.</string>
    <string name="Create_account">Terms</string>
    <string name="privecy">Privacy Policy</string>
    <string name="enterphonenumber">Enter your phone number</string>
    <string name="continues">Continue</string>
    <string name="setlocation">Set your location to see services around you</string>
    <string name="hint">We only acess your location while you are using the app to improve your experience.</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="label_loading">loading</string>
    <string name="facial"><![CDATA[Facial & Cleanup]]></string>
    <string name="title_booking">Booking</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact">Help Center</string>
    <string name="title_about">About Company</string>
    <string name="SaveAddress">Faq</string>
    <string name="Logout">Log Out</string>
    <string name="thanksmsg">Thanks Your Order has been successfully submited</string>
    <string name="deliverymsg">Our professional will arrive soon....</string>
    <string name="entername">Full Name</string>
    <string name="enterEmail">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_phoneNumber">Phone Number</string>
    <string name="Login">Login</string>
    <string name="agrees">To use Acron Inc, you agree to follow standard for healthyd safe tasking, shared by everyone in our community</string>
    <string name="Order_id">Order Id</string>
    <string name="orderrecieved">Confirmed</string>
    <string name="ontheway">On the Way</string>
    <string name="Deliverd">Completed</string>
    <string name="DeliveryStatus">Order Date And Time</string>
    <string name="Time">20 August 6:30 PM</string>
    <string name="subtotal">Sub Total</string>
    <string name="TotalAmount">Total Amount</string>
    <string name="paymentType">Payment Type</string>
    <string name="business">Company name</string>
    <string name="title_orderhistory">Order History</string>
    <string name="filter">Filter</string>
    <string name="Latestreview">Latest Ratting and Review</string>
    <string name="sorting">Sorting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_slideshow1">Slideshow1</string>
    <string name="fruits"><![CDATA[Fruits & Vegitable]]></string>
    <string name="feature_product"><![CDATA[Best priced fruits & veggies]]></string>
    <string name="menu_mysubscription">My stock</string>
    <string name="menu_shopbycat">Auction Management</string>
    <string name="menu_insurance">Insurance</string>
    <string name="menu_actionreports">Auction Report</string>
    <string name="menu_support">Lead management</string>
    <string name="menu_mechanic">Find mechanic</string>
    <string name="menu_tow">Find Towing service</string>
    <string name="menu_referandearn"><![CDATA[Refer & Earn]]></string>
    <string name="menu_offers">Offers</string>
    <string name="menu_history">My Order</string>
    <string name="iagree"><![CDATA[I agree to Terms & conditions]]></string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="locality">Locality</string>
    <string name="full_address">Full Address</string>
    <string name="dealership_name">Dealership Name</string>
    <string name="dealership_address">Dealership Address</string>
    <string name="pincode">Pincode</string>
    <string name="pan_number">Pancard Number</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="gst_number">GST Number</string>
    <string name="otp">Enter OTP</string>
    <string name="bank_details">Bank Details</string>
    <string name="ic_back">ic_back</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_">Continue</string>
    <string name="bank_name">Bank name</string>
    <string name="account_no">Account no</string>
    <string name="ifsc_code">IFSC CODE</string>
    <string name="bank_branch">Bank branch</string>
    <string name="ic_tab">ic_tab</string>
    <string name="cancelled_cheque">cancelled cheque</string>
    <string name="onboarding_documents">Onboarding documents</string>
    <string name="email_id_otp_verify">Email id</string>
    <string name="i_have_an_account">I have an account.</string>
    <string name="Log_in">Log in</string>
    <string name="select_state">Select State</string>
    <string name="select_district">Select District</string>
    <string name="home">home</string>
    <string name="Buycar">Buy Car</string>
    <string name="Shortlists">Shortlists</string>
    <string name="sellcar">Sell car</string>
    <string name="Account">Account</string>
    <string name="favourite">Favourite</string>
    <string name="arrow_forward">Arrow forward</string>
    <string name="logout">Logout</string>
    <string name="signup_as">Signup as</string>
    <string name="Dealer">Dealer</string>
    <string name="Mechanic">Mechanic</string>
    <string name="Customer">Customer</string>
    <string name="Freelancer">Freelancer</string>
    <string name="Evaluator">Evaluator</string>
    <string name="search_edt_hint">Search cars by Make or Model (e.g Audi A3)</string>
    <string name="pbl">Popular Brand logo</string>
    <string name="title_activity_filter">FilterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hyundai">Hyundai</string>
    <string name="registered_mobile_number">Registered Mobile Number</string>
    <string name="password">Password</string>
    <string name="login_with_google">Login with google</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="live_auction">Live Auction</string>
    <string name="front_side_image">Front Side Image</string>
    <string name="left_side_image">Left Side Image</string>
    <string name="right_side_image">Right Side Image</string>
    <string name="back_side_image">Back Side Image</string>
    <string name="dicky_side_image">Dicky Side Image</string>
    <string name="add_vehicles">Add Vehicles</string>
    <string name="update_images">Update Images</string>
    <string name="add_images">Add Images</string>
    <string name="products_details">Products Details</string>
    <string name="enter_bid_amount">Enter Bid Amount</string>
    <string name="submit">Submit</string>
    <string name="dealership_state">Dealership (State)</string>
    <string name="experience">Experience</string>
    <string name="profile">Profile</string>
    <string name="garage_address">Garage Address</string>
    <string name="specialized_brand">Specialized Brand</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_profle">Update Profle</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="title_activity_update_my_car">Activity_Update_My_Car</string>
    <string name="update_vehicle">Update Vehicle</string>
    <string name="fullscreen_image">Fullscreen Image</string>
    <string name="delete_vehicle">Delete Vehicle</string>
    <string name="bid_now">Bid Now</string>
    <string name="my_bids">My Bids</string>
    <string name="add_bank">Add Bank</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="mproduct"><![CDATA[Save & Add more Products]]></string>
    <string name="gst_details">GST details</string>
    <string name="resend_otp">Resend a new code.</string>
    <string name="delete_account">Do You Want To Delete This Account?</string>
    <string name="title_activity_update_compnay_profile">UpdateCompnayProfileActivity</string>
    <string name="edit_protfolio_details">Edit portfolio/work samples</string>
    <string name="add_portfolio_work_samples">+ Add portfolio/work samples</string>
    <string name="github_link">GitHub Link</string>
    <string name="copy_from_your_last_application">Copy from your last application and edit</string>
</resources>